logic-gates-app/src/App.css
/* ... */
.sidebar .project-options{
  position: relative;
  left: 180px;
  top: -15px;
  min-width: 40%;
  display: block;
}

.sidebar .project-options-inner{
  position: absolute;
  color: white;
  background-color: var(--theme-primary-color);
  border-radius: 8px;
  padding: 10px;
  border: 1px solid #333;
  z-index: 1;
}

.sidebar .project-options-inner button{
  background-color: transparent;
  border: none;
  color: white;
  border-radius: 8px;
  width: 100%;
  padding: 10px;
  font-size: medium;
}
.sidebar .project-options-inner button:hover{
  background-color: #474e5d;
}

/********** Tools Window *************/


.tools-window{
  background-color: grey;
  border: 1px solid grey;
  position: absolute;
  top: 75%;
  left: 10vw;
  box-shadow: 5px 5px 5px #0004;
  border-top: 25px solid var(--theme-primary-color);
  border-radius: 10px;
  padding: 10px;
  color: white;
  z-index: 11;
  display: block;
  font-size: small;
  animation: slideIn 0.3s ease-in-out;
}



.tools-window-inner .clear{
  background-color: rgb(201, 8, 8);
  color: white;
  border: none;
  padding: 5px 5px;
  cursor: pointer;
  border-radius: 10px;

}

.tools-window-inner button:hover{
  background-color: var(--button-hover-color);
  color: var(--theme-primary-color);
}

.tools-window-inner{
  display: block;
  width: 7em;
}

.tools-window-inner .download-netlist{
  background-color: white;
  color: black; 
  border: none;
  padding: 5px 5px;
  cursor: pointer;
  border-radius: 10px;
  margin-bottom: 10px;
}


/*********** Content Area ***********/

.svg-grid {
  position: relative; /* Keeps the SVG within the normal document flow */
  z-index: 1; /* Lower value so other elements are above it */
  width: 100vw;
  height: 100vh;
  z-index: 1;
}

.content-overlay {
  position: absolute; /* Make sure this overlaps on top of the SVG */
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
   /* Higher value so it's on top of the SVG */
   z-index: 1;
}

.content-area{
  
  width: 100%;
  min-height: 80%;
  
}

.spinner{
  position: absolute;
  top: 45%;
  left: 50%;
  width: 60px;
  height: 60px;
  border: 4px solid rgba(0, 0, 0, 0.156);
  border-top: 4px solid var(--theme-primary-color);
  border-radius: 50%;
  z-index: 999;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

.konvajs-container {
  position: relative;
  z-index: 1;
  width: 100vw;
  height: calc(100vh - 60px); /* Make the height of Konva container take full height minus the header */
  margin-top: 60px; /* This ensures it starts after the header */
}

.konvajs-content {
  position: unset !important;  /* Ensure it's visible */
  border: 2px solid black;  /* Optional, to visually see the area */
  
}

.cookie-popup {
  position: fixed;
  bottom: 20px;
  right: 20px;
  max-width: 300px;
  background-color: var(--theme-primary-color);
  color: white;
  padding: 16px 20px;
  border-radius: 8px;
  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
  z-index: 9;
  font-size: 14px;
  animation: slideIn 0.5s ease-in-out;
}

.cookie-popup button {
  background-color: white;
  color: black;
  padding: 6px 12px;
  border: none;
  margin-top: 10px;
  border-radius: 8px;
  cursor: pointer;
}

.cookie-popup button:hover {
  background-color: var(--button-hover-color);
}

@keyframes slideIn {
  from {
    opacity: 0;
    transform: translateY(40px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}



/*************** User Input Box **************/

.user-input{
  background-color: var(--theme-primary-color);
  position: absolute;
  z-index: 999; /* A high value to ensure it's on top */
  width: auto;
  min-width: 500px;
  height: auto;
  left: 40%;  /* Start closer to the left */
  top: 60%;
  border-radius: 10px;
  padding-top: 30px;
  box-shadow: 5px 5px 5px #0004;
  animation: slideIn 0.3s ease-in-out;
}

.textarea-button-container{
  background-color: grey;
  border-radius: 0 0 10px 10px;
  padding: 10px;
}

.textarea-button-container textarea{
  height: 150px;
}

.button-wrapper{
  text-align: end;
}

.use-ai-button {
  position: relative;
  padding: 5px 10px;
  border: 1px solid #ccc;
  border-radius: 10px;
  background-color: #fff;
  cursor: pointer;
  z-index: 0;
  overflow: hidden;
  color: #111827;
}

.use-ai-button:hover {
background-color: var(--button-hover-color);
}

.use-ai-button.active::before {
  content: "";
  position: absolute;
  top: -200px;
  left: -200px;
  right: -200px;
  bottom: -200px;
  background: conic-gradient(
    red,
    orange,
    yellow,
    lime,
    cyan,
    blue,
    violet,
    red
  );
  z-index: -2;
  border-radius: 10px;
  animation: spin 2s linear infinite;
}

/* create inner layer to mask content background */
.use-ai-button.active::after {
  content: "";
  position: absolute;
  top: 2px;
  left: 2px;
  right: 2px;
  bottom: 2px;
  background: white;
  z-index: -1;
  border-radius: 6px;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.create-button {
  background-color: var(--theme-primary-color);
  color: white;
  border: none;
  padding: 5px 10px;
  cursor: pointer;
  border-radius: 10px;
  margin: 0 10px 0 10px;
  border: 1px solid var(--theme-primary-color);
}

.create-button:disabled{
  background-color: #ccc;
  color: #666;
  cursor: not-allowed;
  opacity: 0.7;
}

.create-button:hover{
  background-color: #4f5868;
}

.delete-button{
  background-color: white;
  color: black;
  border: none;
  padding: 5px 10px;
  cursor: pointer;
  border-radius: 10px;
  border: 1px solid #ccc;
}

.delete-button:disabled{
  background-color: #ccc;
  color: #666;
  cursor: not-allowed;
  opacity: 0.7;
}

.delete-button:hover{
  background-color: var(--button-hover-color);
}
/* ... */

